--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,5 @@ description = "a variety of daily used tools"
 license = "MIT"
 repository = "https://github.com/wayfar9r/todoit.git"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-mocki = { version = "0.1.0", path = "../mocki" }
+mocki = "0.1.1"
