--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jaw"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Artemij Artemev"]
 keywords = ["cli", "read", "input"]
@@ -9,4 +9,7 @@ license = "MIT"
 repository = "https://github.com/wayfar9r/jaws.git"
 
 [dependencies]
+
+
+[dev-dependencies]
 mocki = "0.1.1"
